fix(vscode): Scale content without font blurriness (#495)

--- a/apps/angular-console/src/app/app.component.scss
+++ b/apps/angular-console/src/app/app.component.scss
@@ -2,6 +2,10 @@
   display: block;
   height: 100vh;
   overflow: hidden;
+
+  &.vscode {
+    height: 125vh;
+  }
 }
 
 .content-container {
